--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "react-spring": "^9.4.4",
+    "react-use-measure": "^2.1.1",
+    "styled-components": "^5.3.3",
     "typewriter-effect": "^2.18.2",
     "web-vitals": "^2.1.4"
   },
