--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router": "^6.14.0",
+    "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.0",
     "react-spring": "^9.4.4",
     "react-use-measure": "^2.1.1",
