--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "websitev4",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://kevinngo.tech",
+  "homepage": "/website-v4",
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
